rbd-mirror: update mirror status when stopping

Fixes: http://tracker.ceph.com/issues/36659
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit c00f661882cdde2726763bd5173028b9faf7777d)